--- a/index.html
+++ b/index.html
@@ -9,7 +9,33 @@
 </head>
 <body>
   <h1>SnipeIT API</h1>
-  <h2>Read Data from the API</h2>
+  <div class="accessoriesTable">
+    <div class="headerRow row">
+      <div class="headerColumn column">
+        Header columns
+      </div>
+      <div class="headerColumn column">
+        Header columns
+      </div>
+    </div>
+    <div class="middleRow row">
+      <div class="middleColumn column">
+        Middle columns
+      </div>
+      <div class="middleColumn column">
+        Middle columns
+      </div>
+    </div>
+    <div class="footerRow row">
+      <div class="footerColumn column">
+        Footer columns
+      </div>
+      <div class="footerColumn column">
+        Footer columns
+      </div>
+    </div>
+  </div>
+  <!-- <h2>Read Data from the API</h2> -->
   <h2>Display Data in the table</h2>
   <h2>We need a form to send data to the API</h2>
   <h2>We need to update the table with new row of data</h2>
